feat: emoji for device now can de set in config
